<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_10_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.01" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_90_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.99" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TourApp"
                android:textSize="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/login_cover"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90_percent"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10_percent"
                app:layout_constraintTop_toBottomOf="@+id/login_title" />


            <TextView
                android:id="@+id/username_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Username:"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/etUsername"
                app:layout_constraintStart_toStartOf="@+id/etUsername"
                app:layout_constraintTop_toBottomOf="@+id/ivImage" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/your_rounded_button"
                android:hint="Ingrese su usuario"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90_percent"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10_percent"
                app:layout_constraintTop_toBottomOf="@+id/username_text" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Password:"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/your_rounded_button"
                android:hint="Ingrese su contraseña"
                android:inputType="textPassword"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90_percent"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10_percent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/your_rounded_button"
                android:padding="8dp"
                android:text="LOGIN"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>